<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Movie_part.Movie_MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/movieToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edMName"
            android:layout_width="275dp"
            android:layout_height="match_parent"
            android:hint="@string/type_movie"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieToolbar" />

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="search"
            android:text="@string/search" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year" />

    <TextView
        android:id="@+id/tvActors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actors" />

    <TextView
        android:id="@+id/tvDirector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/director" />

    <TextView
        android:id="@+id/tvRated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rated" />

    <TextView
        android:id="@+id/tvRuntime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/runtime" />

    <TextView
        android:id="@+id/tvPlot"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:text="@string/plot" />

    <ImageView
        android:id="@+id/ivPoster"
        android:layout_width="match_parent"
        android:layout_height="314dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:text="@string/add" />

    <TextView
        android:id="@+id/imgURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black" />

</LinearLayout>