<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicketMaster.TMLogin">

    <TextView
        android:id="@+id/cityHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cityHeader"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/inputCity"
        app:layout_constraintEnd_toEndOf="@+id/inputCity"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/inputCity" />

    <EditText
        android:id="@+id/inputRadius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCity" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/continueButton"
        app:layout_constraintEnd_toEndOf="@+id/inputRadius"
        app:layout_constraintStart_toStartOf="@+id/inputRadius"
        app:layout_constraintTop_toBottomOf="@+id/inputRadius" />

    <TextView
        android:id="@+id/radiusHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radiusHeader"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/inputRadius"
        app:layout_constraintEnd_toEndOf="@+id/inputRadius"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/inputRadius" />

    <EditText
        android:id="@+id/inputCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>